# dlman

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FIXES_NEEDED.md  INSTALL.md  LICENSE  README.md  RELEASE_v1.6.0.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: FUNDING.yml
.github/workflows/: build-extensions.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/src/: commands.rs  main.rs  output.rs  progress.rs
apps/desktop/: i18next-parser.config.js  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: browser_server.rs  commands.rs  lib.rs  log_forward.rs  main.rs  state.rs  window_manager.rs
apps/desktop/src/components/: ContextMenu.tsx  DropZoneOverlay.tsx  SupportReminder.tsx  UpdateNotification.tsx
apps/desktop/src/components/dialogs/: AboutDialog.tsx  BatchImportDialog.tsx  BulkDeleteConfirmDialog.tsx  CategoryDialog.tsx  ConfirmDialog.tsx  CredentialPromptDialog.tsx  DeleteConfirmDialog.tsx  DownloadInfoDialog.tsx  NewDownloadDialog.tsx  QueueDialog.tsx  QueueManagerDialog.tsx  SettingsDialog.tsx  index.ts
apps/desktop/src/components/dnd/: DndProvider.tsx  DraggableDownloadItem.tsx  DroppableSidebarItem.tsx
apps/desktop/src/components/downloads/: DownloadItem.tsx  DownloadList.tsx  EmptyState.tsx
apps/desktop/src/components/layout/: DevConsole.tsx  FilterBar.tsx  Layout.tsx  MainContent.tsx  MenuBar.tsx  SelectionToolbar.tsx
apps/desktop/src/components/sidebar/: ActiveDownloads.tsx  FolderList.tsx  NetworkStats.tsx  QueueList.tsx  Sidebar.tsx
apps/desktop/src/components/ui/: dialog.tsx  time-picker.tsx  toggle-group.tsx
apps/desktop/src/hooks/: useFileDrag.ts  useKeyboardShortcuts.tsx  useQueueSchedules.ts  useUpdateCheck.ts
apps/desktop/src/i18n/: apply.ts  config.ts  fonts.ts  index.ts  useApplyLocale.ts
apps/desktop/src/i18n/locales/en/: translation.json
apps/desktop/src/i18n/locales/fa/: translation.json
apps/desktop/src/lib/: categoryIcons.tsx  download-path.ts  events.ts  notifications.ts  system-tray.ts  toast.ts  url-intake.ts  utils.ts  version.ts
apps/desktop/src/stores/: batch-import.ts  categories.ts  credentials.ts  downloads.ts  queues.ts  settings.ts  ui.ts  update.ts
apps/desktop/src/styles/: globals.css
apps/desktop/src/types/: index.ts
apps/extension/: DOWNLOAD.md  README.md  package.json  tailwind.config.js  tsconfig.json  wxt.config.ts
apps/extension/.wxt/types/: paths.d.ts
apps/extension/public/: media-hook.js
apps/extension/scripts/: copy-icons.js
apps/extension/src/entrypoints/: background.ts  content-early.ts  content.ts
apps/extension/src/entrypoints/options/: App.tsx  index.html
apps/extension/src/entrypoints/popup/: App.tsx  index.html  store.ts
apps/extension/src/entrypoints/popup/components/: ActiveDownloads.tsx  AddWithApp.tsx  ConnectionStatus.tsx  Footer.tsx  Header.tsx  QuickAdd.tsx  SiteToggle.tsx
apps/extension/src/lib/: api-client.ts  hls-parser.ts  media-hook.ts  media-types.ts  storage.ts  utils.ts  video-detector.ts  video-overlay.ts
apps/extension/src/styles/: globals.css
apps/extension/src/types/: index.ts
apps/next/: .env.example  cloudflare-env.d.ts  components.json  package.json  wrangler.jsonc
apps/next/scripts/: generate-code-blocks.mts
apps/next/src/app/: globals.css  layout.tsx
apps/next/src/app/(main)/: layout.tsx  page.tsx
apps/next/src/app/(main)/about/: page.tsx
apps/next/src/app/(main)/blog/: page.tsx
apps/next/src/app/(main)/blog/introducing-dlman/: page.tsx
apps/next/src/app/(main)/download/: page.tsx
apps/next/src/app/(main)/download/linux/: page.tsx
apps/next/src/app/(main)/download/mac/: page.tsx
apps/next/src/app/(main)/download/windows/: page.tsx
apps/next/src/app/(main)/support/: page.tsx
apps/next/src/app/docs/: layout.tsx  page.tsx
apps/next/src/app/docs/architecture/: page.tsx
apps/next/src/app/docs/cli/: page.tsx
apps/next/src/app/docs/contributing/: page.tsx
apps/next/src/app/docs/core-engine/: page.tsx
apps/next/src/app/docs/extension/: page.tsx
apps/next/src/app/docs/introduction/: page.tsx
apps/next/src/components/: code-block.tsx  download-section.tsx  theme-provider.tsx  theme-toggle.tsx
apps/next/src/components/layout/: footer.tsx  navbar.tsx
apps/next/src/components/sections/: cli.tsx  docs-preview.tsx  extension.tsx  features.tsx  hero.tsx  support-cta.tsx
apps/next/src/components/ui/: accordion.tsx  alert.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  card.tsx  combobox.tsx  command.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  field.tsx  input-group.tsx  input.tsx  navigation-menu.tsx  popover.tsx  scroll-area.tsx  select.tsx  sheet.tsx  tabs.tsx  textarea.tsx  toggle-group.tsx
apps/next/src/data/: blog.ts  docs.ts  downloads.ts  features.ts  seo.ts  site.ts
apps/next/src/data/code-blocks/: cli-advanced.sh  cli-basic.sh  cli-install.sh  install-commands.sh
crates/dlman-core/: Cargo.toml
crates/dlman-core/src/: download.rs  download_old.rs  error.rs  lib.rs  queue.rs  scheduler.rs  storage.rs
crates/dlman-core/src/engine/: download_task.rs  manager.rs  mod.rs  persistence.rs  rate_limiter.rs  segment_worker.rs
crates/dlman-core/src/media/: dash.rs  hls.rs  mod.rs
crates/dlman-types/: Cargo.toml
crates/dlman-types/src/: lib.rs
docs/: AI_GUIDELINES.md  ARCHITECTURE.md  CLI.md  CORE.md  DEVELOPMENT.md  EXTENSION.md  INSTALL.md  PLUGIN_SYSTEM.md  RELEASE.md  TRANSLATING.md  VISION.md
scripts/: macos-install.sh
