[workspace]
resolver = "2"
members = [
    "apps/desktop/src-tauri",
    "apps/cli",
    "crates/dlman-core",
    "crates/dlman-types",
]

[workspace.package]
version = "1.8.0"
edition = "2021"
authors = ["DLMan Contributors"]
license = "MIT"
repository = "https://github.com/novincode/dlman"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["stream", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
parking_lot = "0.12"
tokio-util = { version = "0.7", features = ["io"] }
directories = "5.0"
dirs = "5.0"
futures = "0.3"

# CLI
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
console = "0.15"

# Tauri
tauri = { version = "2.0", features = [] }
tauri-build = "2.0"

# Internal crates
dlman-core = { path = "crates/dlman-core" }
dlman-types = { path = "crates/dlman-types" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
