[package]
name = "dlman-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "DLMan Desktop Application"

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
dlman-core = { workspace = true }
dlman-types = { workspace = true }

tauri = { workspace = true, features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
directories = { workspace = true }

# Browser extension integration server
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
futures-util = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "dlman_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dlman-desktop"
path = "src/main.rs"
